<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/back_color">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

    <TextView
        android:id="@+id/register_textt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/register_button"
        android:textSize="22sp"
        android:textColor="@color/white_color"
        android:textStyle="bold"
        android:layout_marginTop="15dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#E2818080"
        android:layout_marginTop="10dp" />

    <EditText
        android:id="@+id/user_name"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/edit_shape2"
        android:hint="@string/username_register"
        android:drawablePadding="10dp"
        android:drawableStart="@drawable/ic_action_person"
        android:inputType="textPersonName"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:textSize="14sp"
         />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/edit_shape2"
        android:drawableStart="@drawable/ic_action_mail"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:hint="@string/email"
        android:textSize="14sp"
        android:drawablePadding="10dp"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/edit_shape2"
        android:drawableStart="@drawable/ic_action_lock"
        android:drawablePadding="10dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:textSize="14sp"
        android:hint="@string/password_register"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/confirm_pass"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/edit_shape2"
        android:drawableStart="@drawable/ic_action_lock"
        android:drawablePadding="10dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:textSize="14sp" />
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp">

    <EditText
        android:id="@+id/phone_number"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:drawableStart="@drawable/ic_action_phone"
        android:background="@drawable/edit_shape2"
        android:drawablePadding="10dp"
        android:hint="@string/phone_number"
        android:textSize="14sp"
        android:inputType="phone" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    <EditText
        android:id="@+id/address"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/edit_shape2"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:drawableStart="@drawable/ic_action_location"
        android:drawablePadding="10dp"
        android:hint="@string/address"
        android:textSize="14sp"
        android:inputType="text" />

    <TextView
        android:id="@+id/type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_your_blood_type"
        android:layout_margin="12dp"
        android:textSize="16sp"
        android:textColor="@color/white_color"
        android:textStyle="bold" />


    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:background="@drawable/edit_shape2"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="100dp"
        android:layout_marginStart="10dp"
        >

    </androidx.appcompat.widget.AppCompatSpinner>



    <Button
        android:id="@+id/register_btn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_shape"
        android:text="@string/register_button"
        android:textColor="@color/white_color"
        android:layout_gravity="center"
        android:layout_marginTop="45dp"
        android:textSize="16sp"
        android:textStyle="bold"
        android:onClick="registerNewAccount"/>
    </androidx.appcompat.widget.LinearLayoutCompat>

</ScrollView>