<?xml version="1.0" encoding="utf-8"?>
    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:background="@drawable/back_color"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="12dp"
            android:padding="8dp"
            android:elevation="4dp"
            android:orientation="vertical"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="@color/white_color"
                android:text="@string/national_id"
                android:textStyle="bold"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:id="@+id/textNationalId"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:padding="5dp"
                android:background="@color/white_color"
                android:textSize="16sp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="@color/white_color"
                android:text="@string/choose_donation_type"
                android:textStyle="bold"
                />
                        <CheckBox
                            android:id="@+id/check_box"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:layout_marginTop="8dp"
                            android:padding="5dp"
                            android:text="@string/plasma"
                            android:background="@color/white_color"
                            android:textSize="16sp"
                            android:theme="@style/RadioButtonStyle"
                            android:textColor="@color/black" />
            <CheckBox
                android:id="@+id/check_box2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:textSize="16sp"
                android:background="@color/white_color"
                android:text="@string/platelets"
                android:theme="@style/RadioButtonStyle"
                android:textColor="@color/black" />
            <CheckBox
                android:id="@+id/check_box3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:padding="5dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:background="@color/white_color"
                android:text="@string/both"
                android:theme="@style/RadioButtonStyle"
                android:textColor="@color/black"
                />
                        <Button
                            android:id="@+id/order_btn"
                            android:layout_width="120dp"
                            android:layout_height="40dp"
                            android:background="@drawable/btn_shape"
                            android:text="@string/request"
                            android:textAllCaps="false"
                            android:textColor="#FFF"
                            android:textSize="18sp"
                            android:layout_marginTop="18dp"
                            android:layout_gravity="center"
                            android:layout_marginEnd="6dp"
                            android:layout_marginBottom="10dp"/>

        </androidx.appcompat.widget.LinearLayoutCompat>
    </RelativeLayout>