<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="6dp"
    android:background="@drawable/back_color">
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp">

        <EditText
            android:id="@+id/phone_number_google"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:drawableStart="@drawable/ic_action_phone"
            android:background="@drawable/edit_shape2"
            android:drawablePadding="10dp"
            android:hint="@string/phone_number"
            android:textSize="14sp"
            android:inputType="phone" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <EditText
        android:id="@+id/address_google"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/edit_shape2"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:drawableStart="@drawable/ic_action_location"
        android:drawablePadding="10dp"
        android:hint="@string/address"
        android:textSize="14sp"
        android:inputType="text" />

    <TextView
        android:id="@+id/type_google"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_your_blood_type"
        android:layout_margin="12dp"
        android:textSize="16sp"
        android:textColor="@color/white_color"
        android:textStyle="bold" />


    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/spinner_google"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:background="@drawable/edit_shape2"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="100dp"
        android:layout_marginStart="10dp"
        >

    </androidx.appcompat.widget.AppCompatSpinner>
    <Button
        android:id="@+id/register_btn_google"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_shape"
        android:text="@string/register_button"
        android:textColor="@color/white_color"
        android:layout_gravity="center"
        android:layout_marginTop="45dp"
        android:textSize="16sp"
        android:textStyle="bold"
        android:onClick="registerNewAccount"/>


</androidx.appcompat.widget.LinearLayoutCompat>