<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.ProfileActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="10dp"
            android:orientation="vertical">
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/circle_image"
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:layout_gravity="center"
                android:layout_margin="4dp"
                android:src="@drawable/images"
                app:civ_border_color="#FF5722"
                app:civ_border_width="2dp" />
            <ImageButton
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="5dp"
                android:padding="5dp"
                android:id="@+id/editProfile"
                android:layout_gravity="center"
                android:background="@drawable/ic_baseline_edit_24"
                />
        </LinearLayout>

        <View
            android:id="@+id/view_line"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_below="@id/linear"
            android:layout_margin="20dp"
            android:background="@color/grey_color" />

        <LinearLayout
            android:id="@+id/main_linear"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_below="@id/view_line"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/linear2"
                android:layout_width="80dp"
                android:layout_height="150dp"
                android:layout_marginStart="10dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/text_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="28dp"
                    android:hint="@string/a_blood_hint"
                    android:textColor="#FB0101"
                    android:textSize="52sp"
                    android:textStyle="bold" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear3"
                android:layout_width="80dp"
                android:layout_height="150dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="6dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/name_pro"
                    android:textColor="@color/black_color"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/email_pro"
                    android:textColor="@color/black_color"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/address_pro"
                    android:textColor="@color/black_color"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/phone_Pro"
                    android:textColor="@color/black_color"
                    android:textStyle="bold" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/total_points"
                    android:textColor="@color/black_color"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear4"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginEnd="8dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/name_des"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="11dp"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/email_des"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="11dp"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"/>

                <TextView
                    android:id="@+id/Address_des"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="11dp"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"/>

                <TextView
                    android:id="@+id/phone_des"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="11dp"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"/>
                <TextView
                    android:id="@+id/points_des"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="11dp"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    android:text="@string/_0"
                    android:textColor="@color/black"/>
            </LinearLayout>
        </LinearLayout>
        <androidx.cardview.widget.CardView
            android:layout_width="200dp"
            android:layout_height="80dp"
            android:elevation="8dp"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/pink_color"
            android:layout_gravity="center"
            >
            <TextView
                android:id="@+id/date_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/main_linear"
                android:layout_gravity="bottom"
                android:textSize="20sp"
                android:padding="5dp"
                android:textColor="@color/white_color"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                />
            <TextView
                android:id="@+id/edit_update"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/main_linear"
                android:layout_gravity="top"
                android:textSize="18sp"
                android:padding="5dp"
                android:textColor="@color/white_color"
                android:text="@string/edit_update"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                />

        </androidx.cardview.widget.CardView>

        <View
            android:id="@+id/view_line2"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_margin="20dp"
            android:background="@color/grey_color" />
    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>